modificación en html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <hr>
     </header>
     <main>
-
+        <!--CONTENIDO DE SELECTORES-->
         <section>
             <h2>1. Selectores:</h2>
             <p>Pueden ser:</p>
@@ -22,7 +22,8 @@
             <ul>
 
                 <li id="selectorID_first"><b>Selectores de etiquetas:</b></li>
-                <p> Pueden ser: h1, p, div, a, etc.<br>
+                <p> 
+                    Pueden ser: h1, p, div, a, etc.<br>
                     Ejemplo:
                 </p>
 
@@ -63,8 +64,6 @@
                     }
                 </p>
 
-                <!--Este codigo lo que hace es cambiar--->
-
                 <li id="selectorID_third"><b>Selectores de ID:</b></li>
                 <p>Para agregar un ID a un elemento HTML se utiliza el atributo "id" seguido del "nombre del ID".</p>
                 <p>Por Ejemplo:</p>
@@ -90,6 +89,7 @@
             </ul>
         </section>
 
+        <!--CONTENIDO DE HERENCIA-->
         <section>
             <h2>2. Herencia</h2>
             <p>Proceso por el cual los estilos aplicados a un elemento padre se transmiten a sus elementos hijos.</p>
@@ -116,6 +116,7 @@
            
         </section>
 
+        <!--CONTENIDO DE CASCADA-->
         <section>
             <h2>3. Cascada</h2>
             <p> Determina qué reglas de estilo se aplican cuando hay múltiples reglas que coinciden con un elemento. <span>Basado en orden, origen y especificidad.</span></p>
@@ -141,6 +142,7 @@
             <p>En este caso se aplicaria el valor indigo a la etiqueta span, debido a que aparece en ultimo lugar el codigo. </p>
         </section>
 
+        <!--CONTENIDO DE ESPECIFICIDAD-->
         <section>
             <h2>2. Especificidad</h2>
             <p>Es un valor que determina qué estilo se aplicará a un elemento cuando hay múltiples reglas que compiten por afectarlo.
